--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -10,6 +10,11 @@ $gray-800:#1d1d1f;
 $gray-900:#0e0e0f;
 $primary:#541c94;
 $secondary:#8363a9;
+$btn-focus-width:0; 
+$btn-focus-box-shadow:none;
+
+// $enable-responsive-font-sizes: true;
+
 // $success:#1c6821;
 // $danger:#FF304F;
 // $info:#0F81C7;
