--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -13,7 +13,7 @@ $secondary:#8363a9;
 $btn-focus-width:0; 
 $btn-focus-box-shadow:none;
 
-// $enable-responsive-font-sizes: true;
+$enable-responsive-font-sizes: true;
 
 // $success:#1c6821;
 // $danger:#FF304F;
