--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,3 +1,7 @@
-@import "./sidebar.scss";
 @import "./variables.scss";
+
+@import "./sidebar.scss";
+@import "./navbar.scss";
+@import "./dashboard.scss";
+
 @import "~bootstrap/scss/bootstrap";
