--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -2,6 +2,7 @@
 
 @import "./sidebar.scss";
 @import "./navbar.scss";
+@import "./landing.scss";
 @import "./dashboard.scss";
 
 @import "~bootstrap/scss/bootstrap";
