added clock at navbar

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -160,3 +160,8 @@ body {
 	-webkit-line-clamp: 1;
 	-webkit-box-orient: vertical;
 }
+
+.sidebar-brand-header{
+	padding-top: 19px;
+	padding-bottom: 19px;
+}
