--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -9,21 +9,23 @@
 		transition: all 0.3s;
 	}
 
-	.music-container{
+	.music-container {
 		transition: none;
 	}
-
 }
+
+// .welcome-container::before {
+// 	content: ""; // ::before and ::after both require content
+// 	position: absolute;
+// 	width: auto;
+// 	height: auto;
+// 	overflow: hidden;
+// 	background-image: linear-gradient(120deg, #eaee44, #33d0ff);
+// 	opacity: 0.7;
+// }
 
 .noselect {
 	user-select: none;
-}
-
-.clock-container {
-	text-align: center;
-	background-color: rgba($primary, 0.2);
-	border-radius: 1rem;
-	padding: 0.8rem 1.4rem;
 }
 
 .dash-minified {
@@ -52,17 +54,6 @@
 		font-size: $display4-size * 0.8;
 	}
 
-	.clock-container {
-		opacity: 0;
-		height: 0;
-		visibility: hidden;
-		transition-delay: 0.2s;
-
-		* {
-			font-size: 0;
-		}
-	}
-
 	.music-container {
 		opacity: 0;
 		visibility: hidden;
@@ -73,7 +64,6 @@
 		visibility: hidden;
 	}
 }
-
 
 .hideDetails {
 	@include media-breakpoint-down(xs) {
