--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -7,6 +7,8 @@ $highlight-color: #d8d8d8;
 $icon-bg-color: rgba(255, 255, 255, 0.05);
 $icon-size: 40px;
 $sidebar-width: 270px;
+$breakpoint-md: 768px - 1px;
+
 
 @import "~react-pro-sidebar/dist/scss/styles.scss";
 
