--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -4,5 +4,6 @@
 @import "./navbar.scss";
 @import "./landing.scss";
 @import "./dashboard.scss";
+@import "./playlist.scss";
 
 @import "~bootstrap/scss/bootstrap";
