--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -116,6 +116,13 @@ Carousel
 
 .caro-item {
 	background-color: $gray-900;
+	transition: all 0.2s;
+}
+
+.caro-item:hover{
+	background-color: rgba($green, 0.3);
+	cursor: pointer;
+	
 }
 
 .alice-carousel__dots {
@@ -159,14 +166,38 @@ Carousel
 	justify-content: center;
 }
 
-// .testing::before {
-// 	content: ""; // ::before and ::after both require content
-// 	position: absolute;
-// 	top: 0;
-// 	left: 0;
-// 	width: 100%;
-// 	height: 100%;
-// 	background-image: linear-gradient(120deg, #eaee44, #33d0ff);
-// 	opacity: 0.1;
-// 	z-index: 5000;
-// }
+.flex-column-center {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+.timetable-day {
+	min-width: 200px;
+	background-color: $dark;
+	text-align: center;
+	margin-left: 10px;
+	margin-right: 10px;
+	border-radius: 1rem;
+	padding: 0.5rem;
+	border: 1px solid $secondary;
+	list-style-type: none;
+}
+
+.timetable-item {
+	background-color: $gray-900;
+	text-align: center;
+	padding: 0.7rem;
+	border: 1px solid $secondary;
+	border-radius: 1rem;
+	margin: 0 10px;
+	cursor: pointer;
+	transition: transform 0.3s ease-out;
+}
+
+.timetable-item:hover {
+	background-color: $gray-700;
+	transform: scale(105%);
+}
+
